add: hateoas